# websites

./: .env  .gitignore  README.md  backend.bat  docker-compose.yml  plan.md
api/: Dockerfile  pom.xml
backend/: Cargo.toml  Dockerfile  pom.xml
backend/src/: database.rs  main.rs  routes.rs
backend/src/main/java/ch/oliumbi/backend/: Backend.java
backend/src/main/java/ch/oliumbi/backend/autoload/: Autoload.java  Autoloader.java  Factory.java  Loader.java  LoaderFile.java  LoaderJar.java
backend/src/main/java/ch/oliumbi/backend/confguration/: Configuration.java  Environment.java
backend/src/main/java/ch/oliumbi/backend/database/: Database.java
backend/src/main/java/ch/oliumbi/backend/endpoints/account/login/: Login.java  LoginRequest.java  LoginResponse.java
backend/src/main/java/ch/oliumbi/backend/enums/: Environment.java  Method.java  Permission.java
backend/src/main/java/ch/oliumbi/backend/server/: Endpoint.java  Gateway.java  Handle.java  Header.java  Method.java  Path.java  Request.java  Response.java  Server.java
backend/src/main/resources/: application.properties
backend/src/routes/: account.rs  authentication.rs  root.rs
data/: export.csv
database/: 00-setup.sql  01-structure.sql  02-data.sql  Dockerfile
db/: 01-structure.sql  02-data.sql  Dockerfile
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
infrastructure/: .env  README.md  ddclient.conf  docker-compose.yml  nginx.conf
migration/: Dockerfile  V01-jublawoma-donation-enums.sql  V03-shared-account-enums.sql  (+22 more)
(+494 files in other folders)
