[package]
name = "websites"
version = "1.0.0"
edition = "2021"

[dependencies]
# server
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
axum = "0.7.5"

# database
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "time"] }

# serialization
serde = { version = "1.0.203", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"] }

# hashing
argon2 = "0.5.3"

# data types
uuid = { version = "1.8.0", features = ["serde", "v4", "fast-rng"]}
time = { version = "0.3.36", features = ["serde"] }

# tracing
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
